fixed the icon smaller issue

--- a/src/css/instruction.css
+++ b/src/css/instruction.css
@@ -85,7 +85,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  width: 15%;
+  width: 7.5%;
   height: calc(min(5vh, 5vw));
   margin-right: 0.5rem;
 }
@@ -103,6 +103,7 @@
 }
 .instructionWrapper > .instructionBoard >.instructionRule > .instructionContent {
   font-family: 'PoetsenOne', sans-serif;
+  width: 92.5%;
   font-weight: 100;
   font-size: calc(min(2.5vh, 2.5vw));
   color: #7C5729;
